# kubeflow-pipelines-deploy-action

./: Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: test-action.yaml
example/: example_pipeline.py  parameters.yaml
src/: main.py
